# paddle-ocr-android

./: build.gradle  consumer-rules.pro  proguard-rules.pro  settings.gradle
src/main/assets/: .gitkeep
src/main/cpp/: CMakeLists.txt  native.cpp
src/main/java/com/fsyang/paddleocr/: IdCardResult.java  LicensePlateResult.java  OCRPredictorNative.java  OcrCallback.java  OcrResult.java  OcrResultModel.java  PaddleOcrEngine.java
src/main/jniLibs/: .gitkeep
